// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GithubActionsRenderer snapshots > renders go-service 1`] = `
"# Generated by pipeline-gen — https://github.com/nicholasgasior/pipeline-gen
# Do not edit manually. Re-run \`pipeline-gen generate\` to update.
name: go-service CI
on:
  push:
    branches:
      - main
  pull_request: {}
permissions: read-all
jobs:
  vet-and-lint:
    name: vet-and-lint
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - name: Checkout
        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
      - name: Cache dependencies
        uses: actions/cache@d4323d4df104b026a6aa633fbc2026b85a2c7401
        with:
          key: go-\${{ runner.os }}-\${{ hashFiles('**/go.sum') }}
          path: |-
            ~/go/pkg/mod
            ~/.cache/go-build
          restore-keys: go-\${{ runner.os }}-
      - name: Scan for secrets
        uses: gitleaks/gitleaks-action@cb7149a9b57195b609c63e8518d2c6ef8e5b7726
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Set up Go
        uses: actions/setup-go@f111f3307d96850f83d04b4c9e7e57ef5f51e8d4
        with:
          go-version-file: go.mod
      - name: Download modules
        run: go mod download
      - name: Verify modules
        run: go mod verify
      - name: Vet
        run: go vet ./...
      - name: Install golangci-lint
        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
      - name: Lint
        run: golangci-lint run ./...
  unit-tests:
    name: unit-tests
    runs-on: ubuntu-latest
    needs:
      - vet-and-lint
    timeout-minutes: 20
    steps:
      - name: Checkout
        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
      - name: Cache dependencies
        uses: actions/cache@d4323d4df104b026a6aa633fbc2026b85a2c7401
        with:
          key: go-\${{ runner.os }}-\${{ hashFiles('**/go.sum') }}
          path: |-
            ~/go/pkg/mod
            ~/.cache/go-build
          restore-keys: go-\${{ runner.os }}-
      - name: Set up Go
        uses: actions/setup-go@f111f3307d96850f83d04b4c9e7e57ef5f51e8d4
        with:
          go-version-file: go.mod
      - name: Download modules
        run: go mod download
      - name: Run tests
        run: go test -race -coverprofile=coverage.out -covermode=atomic ./...
      - name: Check coverage
        run: go tool cover -func=coverage.out
  build-binary:
    name: build-binary
    runs-on: ubuntu-latest
    needs:
      - unit-tests
    timeout-minutes: 15
    steps:
      - name: Checkout
        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
      - name: Cache dependencies
        uses: actions/cache@d4323d4df104b026a6aa633fbc2026b85a2c7401
        with:
          key: go-\${{ runner.os }}-\${{ hashFiles('**/go.sum') }}
          path: |-
            ~/go/pkg/mod
            ~/.cache/go-build
          restore-keys: go-\${{ runner.os }}-
      - name: Set up Go
        uses: actions/setup-go@f111f3307d96850f83d04b4c9e7e57ef5f51e8d4
        with:
          go-version-file: go.mod
      - name: Build
        run: go build -v -ldflags="-s -w" ./...
      - name: Security scan
        run: go install golang.org/x/vuln/cmd/govulncheck@latest && govulncheck ./...
"
`;

exports[`GithubActionsRenderer snapshots > renders node-basic 1`] = `
"# Generated by pipeline-gen — https://github.com/nicholasgasior/pipeline-gen
# Do not edit manually. Re-run \`pipeline-gen generate\` to update.
name: node-basic CI
on:
  push:
    branches:
      - main
  pull_request: {}
permissions: read-all
jobs:
  unit-tests:
    name: unit-tests
    runs-on: ubuntu-latest
    timeout-minutes: 20
    strategy:
      fail-fast: false
      matrix:
        node-version:
          - "20"
          - "22"
    steps:
      - name: Checkout
        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
      - name: Cache dependencies
        uses: actions/cache@d4323d4df104b026a6aa633fbc2026b85a2c7401
        with:
          key: npm-\${{ runner.os }}-\${{ hashFiles('**/package-lock.json') }}
          path: ~/.npm
          restore-keys: npm-\${{ runner.os }}-
      - name: Scan for secrets
        uses: gitleaks/gitleaks-action@cb7149a9b57195b609c63e8518d2c6ef8e5b7726
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Set up Node.js \${{ matrix.node-version }}
        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af
        with:
          node-version: \${{ matrix.node-version }}
      - name: Install dependencies
        run: npm ci
      - name: Lint
        run: npm run lint
      - name: Security audit
        run: npm audit --audit-level=moderate
      - name: Run tests
        run: npx jest --coverage --ci --forceExit
  build:
    name: build
    runs-on: ubuntu-latest
    needs:
      - unit-tests
    timeout-minutes: 15
    steps:
      - name: Checkout
        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
      - name: Cache dependencies
        uses: actions/cache@d4323d4df104b026a6aa633fbc2026b85a2c7401
        with:
          key: npm-\${{ runner.os }}-\${{ hashFiles('**/package-lock.json') }}
          path: ~/.npm
          restore-keys: npm-\${{ runner.os }}-
      - name: Set up Node.js
        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af
        with:
          node-version: "20"
      - name: Install dependencies
        run: npm ci
      - name: Build
        run: npm run build
  publish-npm:
    name: publish-npm
    runs-on: ubuntu-latest
    needs:
      - build
    timeout-minutes: 10
    if: github.ref_type == 'tag'
    steps:
      - name: Checkout
        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
      - name: Cache dependencies
        uses: actions/cache@d4323d4df104b026a6aa633fbc2026b85a2c7401
        with:
          key: npm-\${{ runner.os }}-\${{ hashFiles('**/package-lock.json') }}
          path: ~/.npm
          restore-keys: npm-\${{ runner.os }}-
      - name: Set up Node.js
        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af
        with:
          node-version: "20"
          cache: npm
          registry-url: https://registry.npmjs.org
      - name: Install dependencies
        run: npm ci
      - name: Publish to npm
        run: npm publish
        env:
          NODE_AUTH_TOKEN: \${{ secrets.NPM_TOKEN }}
"
`;

exports[`GithubActionsRenderer snapshots > renders python-fastapi 1`] = `
"# Generated by pipeline-gen — https://github.com/nicholasgasior/pipeline-gen
# Do not edit manually. Re-run \`pipeline-gen generate\` to update.
name: python-fastapi CI
on:
  push:
    branches:
      - main
  pull_request: {}
permissions: read-all
jobs:
  lint:
    name: lint
    runs-on: ubuntu-latest
    timeout-minutes: 10
    steps:
      - name: Checkout
        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
      - name: Scan for secrets
        uses: gitleaks/gitleaks-action@cb7149a9b57195b609c63e8518d2c6ef8e5b7726
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Set up Python
        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b
        with:
          python-version: "3.12"
      - name: Install linting tools
        run: pip install ruff
      - name: Lint & format check
        run: ruff check . && ruff format --check .
  unit-tests:
    name: unit-tests
    runs-on: ubuntu-latest
    needs:
      - lint
    timeout-minutes: 20
    strategy:
      fail-fast: false
      matrix:
        python-version:
          - "3.10"
          - "3.11"
          - "3.12"
    steps:
      - name: Checkout
        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
      - name: Cache dependencies
        uses: actions/cache@d4323d4df104b026a6aa633fbc2026b85a2c7401
        with:
          key: pip-\${{ runner.os }}-\${{ hashFiles('**/pyproject.toml', '**/requirements*.txt') }}
          path: ~/.cache/pip
          restore-keys: pip-\${{ runner.os }}-
      - name: Set up Python \${{ matrix.python-version }}
        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b
        with:
          python-version: \${{ matrix.python-version }}
      - name: Install dependencies
        run: pip install -e ".[dev]"
      - name: Run tests
        run: pytest --cov --cov-report=xml -v
  build-wheel:
    name: build-wheel
    runs-on: ubuntu-latest
    needs:
      - unit-tests
    timeout-minutes: 10
    steps:
      - name: Checkout
        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
      - name: Set up Python
        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b
        with:
          python-version: "3.12"
      - name: Install build tools
        run: pip install hatch
      - name: Build wheel
        run: hatch build
"
`;
